k8s-apps/utilities/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
