k8s-apps/utilities/postgres/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgres
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/component: app
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
