k8s-apps/utilities/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/component: database
    app.kubernetes.io/managed-by: argocd
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
      nodePort: 30432
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
