k8s-apps/utilities/postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: postgres
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - db.corp.mulliken.net
      secretName: db-tls
  rules:
    - host: db.corp.mulliken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
